samples/_failures_safe/1761410893_07d6a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c514dcc.c:128: error: expected ‘;’, ‘,’ or ‘)’ at end of input
